--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "npm": "3.9.3"
   },
   "scripts": {
-   "postinstall": "./node_modules/.bin/webpack"
+    "postinstall": "./node_modules/.bin/webpack"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +26,7 @@
     "react-redux": "4.4.6",
     "react-router": "3.0.0",
     "redux": "3.6.0",
+    "redux-thunk": "2.1.0",
     "webpack": "1.13.3"
   }
 }
