--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "15.4.1",
     "react-redux": "4.4.6",
     "react-router": "3.0.0",
+    "react-spinner": "0.2.6",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
     "webpack": "1.13.3"
