--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-react": "6.16.0",
     "react": "15.4.1",
     "react-dom": "15.4.1",
+    "react-loader": "2.4.0",
     "react-redux": "4.4.6",
     "react-router": "3.0.0",
     "react-spinner": "0.2.6",
