--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "15.4.1",
     "react-dom": "15.4.1",
     "react-loader": "2.4.0",
+    "react-modal": "1.6.1",
     "react-redux": "4.4.6",
     "react-router": "3.0.0",
     "react-spinner": "0.2.6",
